--- a/404.html
+++ b/404.html
@@ -2,5 +2,5 @@
 <html>
 <head><meta charset="utf-8">
 go to a real link idiot
-<a href="/unblocker-site/index.html">like this one</a>
+<a href="/unblocker/index.html">like this one</a>
 </html>
